Fix overlap of Overlay effect over Navbar

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -33,7 +33,7 @@ header, footer {
   align-items: center;
   position: -webkit-sticky;
   position: sticky;
-  z-index: 20;
+  z-index: 50;
 }
 
 header {
