--- a/app/assets/stylesheets/books.scss
+++ b/app/assets/stylesheets/books.scss
@@ -49,7 +49,7 @@
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: 50;
+  z-index: 20;
   backdrop-filter: brightness(40%);
 }
 
